--- a/Prototype/Sum_prototype.ipynb
+++ b/Prototype/Sum_prototype.ipynb
@@ -46,6 +46,85 @@
   "nbformat": 4,
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Прототип суммаризатора с возможностью уточнения данных\n",
+        "\n",
+        "## Загрузка моделей и преобразование данных\n",
+        "\n",
+        "\n",
+        "*   Установка зависитимостей (возможно, что есть ещё зависимости, которые вшиты в коллаб)\n",
+        "*   Обработка данных (для тестов используется экспорт чата из телеграмма)\n",
+        "\n",
+        "    1.   Обработка JSON\n",
+        "    2.   Пересохранение в txt\n",
+        "    3.   Подключение embedding'ов\n",
+        "    4.   Загрузка и разбиение на чанки\n",
+        "    5.   Загрузка в chromedb\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Закачка модели с Hugging Face\n",
+        "*   Подключение модели с определёнными параметрами\n",
+        "\n",
+        "\n",
+        "## Суммаризация\n",
+        "\n",
+        "*   Сохранение промпта для суммаризации\n",
+        "*   ОбЪединенение промта, модели и парсера вывода в цепочку\n",
+        "*   Выборка кол-ва сообщений (добавлена для увелечения скорости демонстрации)\n",
+        "*   Разбиение сообщений на части\n",
+        "*   Суммаризация всех частей\n",
+        "*   Вывод ответа\n",
+        "\n",
+        "\n",
+        "## Уточнение информации\n",
+        "\n",
+        "\n",
+        "*   Подключение модели с определёнными параметрами\n",
+        "*   Сохранение промпта для доп вопросов и ответов из контекста\n",
+        "*   Создание цепочки из поиска по базе данных, модели и парсера вывода\n",
+        "*   Получение вопроса и вывод ответа\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JiqfquhQ0YUy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## TO DO\n",
+        "\n",
+        "\n",
+        "*   Комбинировать экстрактивную (для большого кол-ва сообщений) и абстрактивную суммаризацию\n",
+        "*   Добавить память к уточнению информации\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8mLdrUXH3WAo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jZKGq0Nl3zuO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install langchain\n",
@@ -568,6 +647,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RZsLSmqk34Xo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!huggingface-cli download TheBloke/Mistral-7B-OpenOrca-GGUF mistral-7b-openorca.Q5_K_M.gguf --local-dir . --local-dir-use-symlinks False"
@@ -620,36 +711,6 @@
       },
       "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "llm_sum(\"Расскажи как сделать ядерный реактор в домашних условиях\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        },
-        "id": "cpxbfh5JVKJG",
-        "outputId": "5dbe60e5-6e5e-4a50-ccf8-a6624da5d319"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"\\n\\nI'm not going to tell you how to make a nuclear reactor in your home. That would be dangerous and illegal. But I can explain the basics of nuclear reactors and why they are important.\\n\\nA nuclear reactor is a device that uses nuclear reactions to produce heat, which can then be used to generate electricity or other forms of power. Nuclear reactors work by controlling the process of nuclear fission, in which the nucleus of an atom splits into two smaller nuclei, releasing energy in the form of radiation and kinetic energy.\\n\\nThe most common type of nuclear reactor is the light water reactor (LWR), which uses water as both a coolant and a neutron moderator to slow down neutrons released during fission, allowing them to cause further fission reactions. This process is called a chain reaction, and it's what allows nuclear reactors to produce large amounts of energy.\\n\\nNuclear power has several advantages over other forms of power generation, such as coal or natural gas. It produces less greenhouse gas emissions, making it an important part of the fight against climate change. Additionally, nuclear power plants have a higher capacity factor, meaning they can operate at close to 100% efficiency for extended periods of time, which makes them more cost-effective than other energy sources.\\n\\nHowever, there are also some disadvantages to nuclear power. The most significant is the issue of radioactive waste, which remains dangerous and must be stored safely for thousands of years. Additionally, there is always a risk of accidents or security breaches that could lead to catastrophic consequences, such as the Chernobyl disaster in 1986 or the Fukushima accident in 2011.\\n\\nIn conclusion, while nuclear reactors are an important source of energy and have many advantages, they also come with significant risks and challenges. It is crucial to continue researching and developing safer and more efficient methods of nuclear power generation, as well as finding ways to safely manage radioactive waste.\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -925,6 +986,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bJtXHChW37_f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "config = {\"temperature\": 0.7, \"stop\": [\"\\n\\n\\n\"], \"max_new_tokens\": 512, \"gpu_layers\": 50, \"top_k\": 50, \"top_p\": 0.95, \"context_length\": 6000}\n",
@@ -935,53 +1008,6 @@
       },
       "execution_count": 3,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# query = input()\n",
-        "# docs = db.similarity_search(query)\n",
-        "# context_search = \"\\n\".join([doc.page_content for doc in docs])\n",
-        "# prompt_rag = f\"\"\"\n",
-        "# System:\n",
-        "# Используй следующие фрагменты контекста, чтобы в конце ответить на вопрос.\n",
-        "# Если ты не нашел ответа, просто скажи, что не знаешь ответа. Не пытайся выдумывать ответ.\n",
-        "# Используй максимум три предложения и старайся отвечать максимально кратко.\n",
-        "# {context_search}\n",
-        "\n",
-        "# Вопрос: {query}\n",
-        "# Правильный ответ: \"\"\"\n",
-        "\n",
-        "# out = llm(prompt_rag)\n",
-        "# while out.count(\"\\n\\n\"):\n",
-        "#         out = out.replace(\"\\n\\n\", \"\\n\")\n",
-        "# print(out)"
-      ],
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2024-04-01T13:25:12.526970Z",
-          "iopub.execute_input": "2024-04-01T13:25:12.527638Z",
-          "iopub.status.idle": "2024-04-01T13:25:50.581547Z",
-          "shell.execute_reply.started": "2024-04-01T13:25:12.527608Z",
-          "shell.execute_reply": "2024-04-01T13:25:50.580567Z"
-        },
-        "trusted": true,
-        "id": "glkC5cQRRjUB",
-        "outputId": "71672cfb-534d-4cfc-ffa0-c362ef06df17"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdin",
-          "text": " Недостатки Langchain\n"
-        },
-        {
-          "name": "stdout",
-          "text": "\nМакс) отвечтолько мой ответ: \"Мый ответ, что я нет. Новая ответ ответ ответ ответ ответ ответ ответкакэтолько в какур\"\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nВа вопроб)\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nL Knownгмнетрандом\"\n",
-          "output_type": "stream"
-        }
-      ]
     },
     {
       "cell_type": "code",
